--- a/source/_posts/思源在树莓派上面的安装.md
+++ b/source/_posts/思源在树莓派上面的安装.md
@@ -1,87 +1,93 @@
 ---
-title: 思源在树莓派上面的安装
+title: SiYuan Installation on Raspberry Pi
 date: 2023-08-05 12:19:00
-categories:
-  - 树莓派
-tags:
-  - docker
-  - 镜像
-  - 升级
-  - 备份
-  - 树莓派
-  - 思源笔记
-  - 临时容器
-  - 数据备份
-description: '总体来说,本文重点介绍了在树莓派中配置思源知识管理软件的步骤,以及软件更新和数据备份的方法,'
+categories: 
+  - Raspberry Pi
+tags: 
+  - Raspberry Pi
+  - Image
+  - Upgrade
+  - Backups
+  - Raspberry Pi
+  - Sources Notes
+  - Temporary Containers
+  - Data Backup
+description: Overall, this article focuses on the steps to configure Civo Knowledge Management software in Raspberry Pi, as well as software updates and data backup methods,
 cover: https://s2.loli.net/2023/08/05/LbHESJPTM593qce.png
 ---
 
-## 镜像安装
+## image installation
 
-### pull镜像
+### pull mirror
 
 ```bash
 sudo docker pull b3log/siyuan
 ```
 
-### 建立目录
+### Create a catalog
 
 ```bash
 sudo mkdir /mydata/siyuan
 ```
 
-### 安装并启动
+### Installation and startup
 
-因为在镜像内的数据目录为`/home/siyuan/Documents/SiYuan`​ 现在两个目录内结构不一样，无法启动，所以需要：
+Because the data directory in the image is `/home/siyuan/Documents/SiYuan` now the structure is not the same in the two directories and can not be started, so you need to:
 
-1. 创建一个临时容器， 绑定 /mydata/siyuan 
+1. Create a temporary container, bind /mydata/siyuan 
+
     ```bash
     sudo docker run -d --restart=always --name siyuan \
     -v /mydata/siyuan/Documents:/www/wwwroot/siyuan/workspace -p 6806:6806  b3log/siyuan
     ```
-2. 进入容器
+2. Entering the container
+
     ```bash
     sudo docker exec -it siyuan sh
     ```
-3. 复制出 容器内的数据`/home/siyuan/Documents/SiYuan`​ 到  /mydata/siyuan
+3. Copy out the data in the container`/home/siyuan/Documents/SiYuan` to  /mydata/siyuan
+
     ```bash
     cp -r /home/siyuan/Documents/SiYuan/ /www/wwwroot/siyuan/workspace/
     ```
-4. 检查复制有没有问题 ，如果没有问题，删除临时容器
+4. Check if there are any problems with the replication, and if not, delete the temporary container.
+
     ```bash
-    sudo docker ps -a # 列出正在运行容器，取得 临时容器的id
-    sudo docker stop d7ee2596218c  # 根据取得的临时容器的id，停止临时容器运行
-    sudo docker rm siyuan  # 删除临时容器
+    sudo docker ps -a # List the running containers and get the id of the temporary container.
+    sudo docker stop d7ee2596218c # Stop the temporary container based on its id.
+    sudo docker rm siyuan # Delete the temporary container.
     ```
-5. 启动
+5. start
+
     ```bash
     sudo docker run -it -d --restart=always --name siyuan\
      -v /mydata/siyuan/Documents/SiYuan:/home/siyuan/Documents/SiYuan -p 6806:6806  b3log/siyuan
     ```
-6. 完成
+6. fulfillment
 
-## 思源 docker升级
+## SiYuan docker upgrade
 
 ```bash
-sudo docker pull b3log/siyuan ## 拉取新的docker
-sudo docker stop siyuan ## 停止容器
-sudo docker rm siyuan ## 删除容器
-## 重新生成容器
+sudo docker pull b3log/siyuan ## Pull the new docker
+sudo docker stop siyuan ## Stop container
+sudo docker rm siyuan ## Deleting containers
+## Re-generating containers
 sudo docker run -it -d --restart=always --name siyuan\
  -v /mydata/siyuan/Documents/SiYuan:/home/siyuan/Documents/SiYuan -p 6806:6806  b3log/siyuan
 ```
 
-## 数据备份
+## data backup
 
 ```bash
-## 方法一
-在思源的界面 => 设置 => 导出 => 导出 即可
+## Method 1
+In SiYuan's interface => Settings => Export => Export and that's it!
 
-## 方法二
-docker stop siyuan ## 停止容器
-cd /mydata/siyuan/Documents/SiYuan  ## 进入思源数据文件夹
-sudo tar -zcvf SiYuan.20230805.tar.gz ./SiYuan    ## 将数据打包为压缩包(需要root权限,否则会压缩失败)
-docker start siyuan  ## 启动容器
+## Method II
+docker stop siyuan ## Stop container
+cd /mydata/siyuan/Documents/SiYuan  ## Go to the SiYuan data folder
+sudo tar -zcvf SiYuan.20230805.tar.gz ./SiYuan    ## Pack the data into a zip archive (requires root privileges, otherwise the zip will fail)
+docker start siyuan  ## Launch Container
 
-## 方法一较为简单，推荐第一种方法
+## Method 1 is simpler and the first method is recommended
 ```
+
