--- a/source/_posts/是否需要还表哥的红包.md
+++ b/source/_posts/是否需要还表哥的红包.md
@@ -1,201 +1,202 @@
 ---
-title: 表哥还钱的时候给了个红包，表嫂不高兴了，我应该怎么办？
+title: What should I do if my cousin gives a red packet when he pays back the money and my sister-in-law gets upset?
 date: 2023-07-21 16:57:00
 categories:
-  - 人情世故
-tags:
-  - 借钱
-  - 亲戚往来
-  - 人情处事
-  - 人际往来
-  - 社会
-  - 交往
-description: '简单的一个人情往来的小故事,告诉你怎么处理才是最好的,避免被想赚便宜的亲戚恶心'
+  - Human Facts
+tags: 
+  - Borrowing Money
+  - Relatives and relatives
+  - human relations
+  - Human Relationships
+  - social
+  - social
+description: A simple little story of human interaction, telling you how to deal with the best, to avoid being disgusted by relatives who want to make a profit
 cover: https://s2.loli.net/2023/07/21/laxSEMsWc6O8fB9.jpg
 ---
-
-## 问题
-
-> 2022年年底,我的表哥由于失业,向我**借了3万块钱**用于应急。这几天,表哥告诉我已经找到了工作,并将借我的3万块钱全数还给了我。 在还钱的时候,表哥表示要感谢我当初的及时相助,另外转账给我888元钱。但是我不知道表哥是怎么跟表嫂解释这件事的,这两天表嫂在家族群里一直在暗示我,说自己人之间借钱还钱还要收利息。我觉得有点尴尬,总感觉表嫂在影射我,不知道现在是把这888元退回去呢,还是买点东西送给他们家的孩子。其实表哥是我大姨的儿子,当初借钱给他时,我从未提过要收取利息,也没有这样的想法。这也是表哥第一次向我借钱,不到4个月就还清了,应该是确实遇到了困难,需要周转使用, **我需要把这个钱退回去吗**?
+> ## Question
+>
+> > At the end of 2022, my cousin borrowed $30,000** from me*** for an emergency because he was unemployed. A few days ago, my cousin told me that he had found a job and returned the entire 30,000 dollars he had borrowed from me. When he returned the money, he thanked me for my timely help and transferred 888 dollars to me. But I don't know how my cousin explained this to my cousin's wife, who has been hinting at me in the family group for the past two days, saying that interest is charged on money borrowed and repaid between family members. I feel a little embarrassed, I always feel that my cousin's wife is insinuating that I don't know if I should return the 888 yuan or buy something for their children. In fact, my cousin is my sister-in-law's son, when I lent him the money, I never mentioned charging interest, nor did I have such an idea. This is also the first time my cousin borrowed money from me, less than 4 months to pay it off, should be really in trouble, need to use the turnover, ** I need to return this money **?
 
 ![uto.webp](https://s2.loli.net/2023/07/21/dKGZxPWNQMbiDB4.webp)
 
-## 观点
+## Opinion
 
-不要退回这笔钱，因为这样做反而着了道。
+Don't return this money, because it would be a mistake to do so instead.
 
-可以基本确定，你的表哥和表嫂有相似的性格。他们只是处理事情的方式不同。
+It is pretty much certain that your cousin and cousin-in-law have similar personalities. They just handle things differently.
 
-作为一个借钱还挨骂的人，你是个好人，不应该受到欺负。我来给你想个辙，因为我不想看到好人还要被人用枪指着。
+As someone who borrowed money and got scolded, you are a good person and don't deserve to be bullied. Let me come up with a solution for you because I don't want to see good people have to be held at gunpoint.
 
-## 正确的应对方法
+## The right way to respond
 
-我将从三个方面来讨论：
+I will discuss this in three ways:
 
-1. **从行为方面分析你表哥为啥这么做**。
-2. **从逻辑上解释表嫂狮吼功命门的位置**。
-3. **从江湖规矩的角度，探讨如何应对你表哥和表嫂的双剑合璧**。
+1. **Analyze behaviorally why your cousin did what he did**.
+2. **Explain logically where your cousin's wife's Lion's Roar Kung Fu lifeblood is located**.
+3. **Examine how to deal with your cousin's and cousin's wife's double sword combination from the perspective of the rules of the jianghu**.
 
-这三个话题涉及不同领域，充满了刺激, 大家坐稳扶好,不小心容易闪着腰。
+These three topics cover different areas and are full of excitement, so sit still and hold on tight, it's easy to flash your back if you're not careful.
 
-## 首先，为什么表哥给你的利息是出于不情愿。甚至就没想着你会收。
+## First, why did your cousin give you interest out of reluctance. It wasn't even thought you'd take it.
 
-因为它的利息和借款时分两次还给你的。道理非常简单: 他的任何一个反常的行为,必然有它必然的逻辑和动机在里面。
+Because it's paid back to you in two installments. The reason is simple: any aberrant behavior on his part must have its own logic and motive.
 
-### 什么叫反常行为? 
+### What's abnormal behavior? 
 
-任何不是直达目标的行为都是反常行为,因为人的本能驱使会让你用最节省能量的方式去解决问题.而不是相反。
+Any behavior that doesn't go straight to the goal is aberrant, because human instincts make you solve problems in the most energy-efficient way possible. Not the other way around.
 
-比如我一顿能吃5个火烧, 那我就会一次去楼下的火烧店买回5个来,一次吃饱.这是一个正常的行为. 如果我能吃五个,非要下楼五趟,一次买一个.你就可以想想我是不是在搞啥鬼了.比如说,楼底火烧老板的姑娘特别漂亮, 为了多聊两句,我恨不能天天吃火烧.顿顿吃,就为了跟姑娘多聊两句.你要是想不明白,就想想你上学时想追班里的班花,是不是家再近都不想回,宁愿绕个圈子也要陪班花一起回家? 
+For example, if I can eat 5 katsuobushi in one meal, I'll go downstairs to the katsuobushi store and buy 5 at a time and eat them all at once. This is a normal behavior. If I could eat five, I'd have to make five trips downstairs to buy one at a time. You can wonder if I'm up to something. For example, the girl who owns the yakitori restaurant downstairs is so pretty, I'd eat yakitori every day just to talk to her. I eat it all the time, just to talk to her. If you can't figure it out, think about when you were in school and you wanted to chase the class president, didn't you want to go home even if it was close to your home, and you'd rather go around in circles than go home with her? 
 
-好了,如果你认同上面的逻辑,那么表格还钱还利息,如果他是诚心要还,本能的行为应该是啥?
+Well, if you agree with the above logic, then the form to pay back the money and interest, if he is sincere to pay back, the instinctive behavior should be what?
 
-是直接转30888, 并且说明利息是888, 对吧. 这才是最直接的还钱方式.不用转两次帐,输入两次密码。
+It's a direct transfer of 30,888, with an interest rate of 888, right? That's the most direct way to pay him back. You don't have to transfer the money twice and enter the code twice.
 
 ![](https://s2.loli.net/2023/07/21/9ZfYAP2inFJr5Q4.webp)
 
-### 那么,分开转帐, 本金和利息分开的**用意在哪里**? 
+### So, what's the point of having separate transfers, separate principal and interest ###? 
 
-用意是: 这个利息,你可以选择不收。
+The idea is that you can choose not to receive the interest.
 
-从这里就可以看出来,你表哥的潜台词其实并不想真给利息,也希望你直接拒收。
+From here, we can see that your cousin's subtext does not really want to give interest, and would like you to refuse to accept it.
 
-那他为什么又要转利息呢?
+Then why does he want to transfer interest?
 
-为了不欠你这个人情啊。
+In order not to owe you this favor ah.
 
-你表哥的潜意识里面希望你这么做: 收下本金,然后说都是亲戚还要啥利息,就把利息给退回去,你看你这样,钱还了,还不欠人情.以后就算有别的事情对不起你,你想那这件事讲理,表哥都能用一句 ''我给你利息了,可你不收啊',多么完美的解决方案!
+Your cousin's subconscious wants you to do this: accept the principal, and then said are relatives and what interest, the interest to return, you see you so, the money back, but also do not owe favors. In the future, even if there are other things wrong you, you want to reason with this matter, cousin can use a sentence ''I give you interest, but you do not accept ah'', what a perfect solution!
 
-这里面的道道, 不经历过体会不深。
+This is the way, do not experience experience not deep.
 
-要是你表哥一次转30888, 连本带利, 你不收都不行.可是这就不是表哥想要的了。
+If your cousin transfers 30888, with interest, you can't refuse to accept it. But that's not what he wanted.
 
-你表哥既然没这么做,那就是没想付利息,还要保住自己的面子。
+If your cousin didn't do it, he didn't want to pay interest and save face.
 
 <img src="https://s2.loli.net/2023/07/21/vZwB12nzPEh7T5R.webp" alt="138_f_JPEG.webp" style="zoom:120%;" />
 
-### 各位记住了,如果你们以后遇到借贷, **对方真想还钱的时候有三种做法**:
+### Remember, folks, if you're ever in a lending situation, there are three things you can do if the person really wants to pay you back ###
 
-1. 借钱的时候就谈好利息
-2. 还钱的时候本利一起给,容不得你拒绝
-3. 还钱的时候亲自上门,还本金,带礼物当利息
+1. negotiate the interest rate at the time of borrowing. 2.
+2. pay back the money together with the principal and interest, so you can't refuse.
+3. pay back the money in person, pay back the principal, and bring gifts as interest.
 
-这些才是真正想给利息的做法. 凡是分开本利两次转账的,对方一定是想你别收利息.所以以后有这种事发生,到底是拿钱,还是说场面话不要钱, 看情况选择吧。
+That's what you do when you really want to pay interest. Anyone who transfers money twice with separate payments must want you to stop charging interest. So if this happens in the future, whether to take the money, or not to take the money as a gesture, it depends on the situation.
 
-### 回归这个问题, 你收了表哥的目的没达到.他铁定不开心.
+### Back to the question, you didn't get what you paid your cousin for. He's not going to be happy.
 
-这也就是为啥你嫂子在群里阴阳你,但是表哥却默不作声的原因了, 思路,行为,事实都一致了.他们的想法是一致的,只不过一个唱红脸,一个唱白脸而已。
+That's why your sister-in-law is yin-yanging you, but your cousin is silent, the thinking, the behavior, the facts are all the same. They're thinking the same thing, they're just one person's face and the other person's face.
 
-## 其次, 咱接着再说表嫂神功的漏洞在哪里
+## Secondly, let's move on to the loopholes in your cousin's wife's magic ##
 
-你嫂子是一个完美主义者, 我说的是他对别人的要求方面。
+Your sister-in-law is a perfectionist, and I'm talking about what he expects from others.
 
-### 善在恶前, 恶在善后
+## Good comes before evil, and evil comes after good ##
 
-如果把你这个行为按照最严重的说法说成是贪财的话,这算是恶. 但是这个行为是因为你借钱这种善行才能成立的。
+This behavior is evil if you call it money-grubbing in the worst sense of the word. But it's only possible because of your good deed of lending money.
 
-详细解释一下的话就是: 你啥都没说就借给表哥三万.必然是善行. 如果你不借这个钱,后面哪来的收利息这回事? 你嫂子又有什么理由暗戳戳的骂你?
+To elaborate, you lent your cousin thirty thousand dollars without saying anything. It must be a good deed. If you hadn't borrowed the money, where would the interest have come from? What reason would your sister-in-law have to criticize you?
 
-所以说,这件事,本质上就是表嫂移花接木,不谈你慷慨借给他钱.却偏偏揪着利息这个小尾巴不放手。
+So, this is essentially a case of the cousin's sister-in-law making up a story, not talking about your generosity in lending him the money. But she's holding on to this little tail of interest.
 
-说他完美主义,是在她的世界观里面,你应该做一个大善人.既要借钱,也不能收益里,做一个彻彻底底的好人。
+He's a perfectionist, in her worldview, you should be a good person. You can't lend money, you can't make money, you can't be a good person.
 
-这就很离谱了.
+That's outrageous.
 
 <img src="https://s2.loli.net/2023/07/21/spHkAvyf6ul21Ce.webp" alt="138JPEG.webp" style="zoom:110%;" />
 
-就好比你在街上吃火烧,来了一个要饭的伸手要吃,你就把没吃完的火烧给了他一个,结果这个要饭的压根不提你的送饭的善行.却撒泼打滚在街上喊,说你太小气.好不容易吃个火烧还要吃你剩下的。
+It's like when you're eating a roast on the street, and a beggar comes and asks for it, so you give him one of your unfinished roast, but the beggar doesn't even mention your good deed of giving him food. But the beggar doesn't even mention your good deed of giving him food, but he rolls around and shouts in the street that you are too stingy. It's not easy to eat a roasted food but he had to eat your leftovers.
 
-看见了吗? 就是这么离谱,对于善因只字不提,对于小瑕疵绝不放手.同时忽略小瑕疵就是因为善行才能成立.抓住不放手。
+See? That's how outrageous it is, not to mention the good cause, but not to let go of the small defects. Ignoring the fact that it's the good deed that makes it true. Hold on to it.
 
-这也就是家里人都比较不爱管闲事.要是我多少都要说一句: 没人家三万救急, 你这888的利息都给不出去,自己留着去下边用吧妹子! 保证让她一口气上不来! 来个一佛出世,二佛升天,还找不出回怼的词来。
+That's why my family is so nosy. If I were to say, "If you don't have 30,000, you won't be able to pay the 888 interest, so keep it for yourself! I'll make sure she can't breathe! She can't find a word to say in return.
 
-### 我也大概能知道他们的想法
+### I can see what they're thinking.
 
-你嫂子之所以这么坑,你表哥之所以这么阴,我也大概能知道他们的想法。
+I can see why your sister-in-law is so mean and your cousin is so mean, I can see what they're thinking.
 
-你表哥前几天刚刚找到工作, 还没收到工资就还钱了,说明了一个问题。
+The fact that your cousin just got a job a few days ago, and he's paying back the money before he's even gotten his paycheck, tells me one thing.
 
-说明这笔钱是它用来预备未知风险的。还没开始用. 所以一笔根本没有用到的钱,还回去还要多花888的利息。以他们两口子的作风,这不是在心头上割肉啊.不想给利息,情理之中。
+It means that the money was used to prepare for an unknown risk. It hasn't been used yet. So it costs 888 more in interest to pay back money that hasn't been used at all. In their style, it's not like they're cutting their hearts out. It makes sense that they wouldn't want to pay interest.
 
-## 最后，咱再说怎么应对。
 
-### 还钱是不合适的
 
-也许大伙认为应该把888还回去,以后不再来往, 这样其实是不合适的.
+### Finally, let's talk about how to deal with it.
 
-为什么?
+### It's not right to give the money back.
 
-你收了888利息.被人骂了,然后把钱还回去,这不是说人家骂对了吗?
+Maybe you guys think you should just give back the 888 and never see each other again, but that's not appropriate.
 
-还钱就是你在用行动表达,你自己都觉得这个钱不应该收。
+Why not?
 
-你这就是认罪。
+You're charging 888 interest. Being scolded, and then return the money, this is not to say that people scolded right?
 
-你不问来由,冒着这个钱拿不回来的风险借给他们。还成了你没理了? 天下哪有这样的道理。
+Returning the money is your way of saying that you don't think you should have taken the money.
 
-因此一定不能走这条路。
+You're admitting your guilt.
 
-### 我们的策略应该是对攻
+You lent them the money without asking why, at the risk of not getting it back. Are you being unreasonable? There is no such thing in the world.
 
-我们从来都不应该陷入到这种被动局面中。我们更提倡对攻.。
+That's why we can't go down this road.
 
-所以我们的策略是, 用她的逻辑去攻击他的逻辑漏洞。她不是不谈大善专抓小恶吗? 那我就让她知道行善到底有多难。
+### Our strategy should be to attack ###
 
-跟她说: 
+We should never get into this kind of passive situation. We prefer to attack.
 
-> 抱歉了嫂子, 那个利息我本来确实不想收, 但是您不知道,去年哥问我借钱的时候, 我也正困难,准备凑钱买辆车跑网约车的。
->
-> 当时钱没凑够,正好又遇到哥开口, 我再难也要帮我哥这一把啊,就先把钱借给哥,让你们先过日子。
->
-> 这回哥多给我钱,我还想着能早点凑够首付呢.也就拿了,我是真没把咱哥当外人。
->
-> 所以我觉得,你们肯定也没把我当外人,要不也不能跟我借钱对吧。
->
-> 这样吧, 我成全你们, 你们也成全我一次。现在啊,你们也先借我3万,我先把车办了,单位不景气.我跑网约车先把这笔钱挣了, 除了这三万.我多还你们1000! 弟弟是知恩图报的人,嫂子到时候一定要收!
+So our strategy is to use her logic to attack the holes in his logic. She doesn't want to talk about the good, she wants to catch the bad. Then I'll show her how hard it is to do good.
 
-把行善的压力还给对方。
+Tell her. 
 
-让他们也尝尝把钱往外掏的滋味。
+> I'm sorry, sister-in-law, I really don't want to charge that interest, but you don't know, last year when my brother asked me to borrow money, I was in a difficult situation, and I was going to get money to buy a car to run the network car.
+> I was in a difficult situation last year when I asked for money to buy a car to run an online car.
+> At that time, I didn't have enough money, and when my brother asked for money, I had to help my brother, so I lent him the money first, so that you could live your life.
+> I lent him the money so that you could live on.
+> This time my brother gave me more money, I thought I could get enough for the down payment earlier. I really don't treat my brother as an outsider.
+> I really don't treat my brother as an outsider.
+> So I think you must not treat me as an outsider either, otherwise you wouldn't have borrowed money from me, right?
+> I'm sure you don't think of me as an outsider either.
+> I'll tell you what, I'll help you, and you'll help me. Now, you can lend me 30,000 dollars, and I'll get my car first, I'm in a recession. I'll make the money from the car, and I'll pay you back an extra 1,000! I'll pay you back an extra 1,000! I'm a grateful man, so you'll have to take it!
+
+I'll pay you back 1,000 more! My brother is a grateful man, sister-in-law must take it!
+
+Give them a taste of what it's like to give money away.
 
 ![](https://s2.loli.net/2023/07/21/4h2UoL5n7gqsEuF.webp)
 
-### 他们面临的选择
+### The choices they face ###
 
-#### 第一种选择 各种托词不借
+#### The first option is to refuse to lend the money under various pretexts.
 
-你就可以问他,你连借钱都做不到,怎么好意思挑我的理呢?合着您是不会打排球还嫌国家队打的不好是吧?
+You can ask him, "How can you pick on me when you can't even lend me the money? You don't know how to play volleyball and you don't think the national team is good at it, right?
 
-#### 第二种选择 说不借钱,也不贪图你给的利益, 只要你把888换回来就行。
+#### The second option is to say that you don't want to lend money, and you don't want the benefits you give, as long as you change the 888 back on the line.
 
-这就暴露本性了,以后保证群里的所有亲戚,以后没人再跟他们犯事借钱了。
+This will expose the nature of the future to ensure that all the relatives in the group, no one with them in the future criminal borrowing money.
 
-#### 第三种选择 答应借钱,也要利息
+#### The third option promises to lend money, but also want interest.
 
-那就说明他自己跟你是一样的,前面阴阳你的话,现在全部原路奉还。
+That means that he is the same as you, the previous yin and yang your words, now all the original way back.
 
-####  第四种, 高风亮节,当着所有人的面说借钱,还不要利息
+#### The fourth option is to lend money without interest in front of everyone.
 
-那就好办了, 你当初借钱的时候没限定时间.这次你拿了钱往银行一存,等到银行利息到了1000再取出来还钱.反正你没亏。但是在这几年时间里,他们的内心会饱受你可能不还钱的煎熬。毕竟你这是在群里被怼才借的钱。 他们是要面子才借的。 每天他们都会担心竹篮打水钱回不来。
+That's good, you didn't have a time limit when you borrowed the money. This time you take the money to the bank a deposit, until the bank interest rate to 1000 and then take out to pay back the money. You didn't lose anything. But over the course of a few years, they'll be tormented by the possibility that you won't pay them back. After all, you were disliked in the group to borrow money. They borrowed it to save face. Every day they worry that the money won't come back.
 
-大致就这几种情况,而且全部都在亲戚面前发生,无论那个结果,保证让他捞不到啥好处。
+These are just a few of the situations, and all of them happen in front of relatives, no matter what the outcome, guaranteed to make him not get any benefits.
 
-最关键的是, 这个办法能让所有的观众把注意力重新回到能借人钱这件事本身就很了不起这个事情上来。 进而忽视后面的利息问题。 让你哥嫂发起的这个利息问题被淡化。
+The most important thing is, this method can make all the audience to return to the attention of the borrower's money this thing itself is very great thing. And then ignore the interest issue. The interest issue initiated by your brother and sister-in-law will be downplayed.
 
 <img src="https://s2.loli.net/2023/07/21/6ZTSu7yGfI4QJPH.jpg" alt="7g" style="zoom:90%;" />
 
-### 实战案例
+### Real-world examples
 
-这个方案是经过实战的。
+This program is a real-life example.
 
-话说有个坏小子,当年他还年轻的时候,有个朋友问另一个朋友借钱,还钱的时候多还了一分利。
+There was a bad boy, when he was young, a friend asked another friend for a loan and paid back the money with an extra penny of interest.
 
-其实这个算是当时熟人借贷的规矩,基本上都是如此办理。
+In fact, this is the acquaintance lending rules, basically so handle.
 
-可是这位借钱的朋友就满世界到处说, 坏小子知道后,就请了一堆朋友吃饭。 当面用上述方法找前者借钱,并把利息加高。搞得这位朋友当场下不来台。
+However, the friend who borrowed the money went around the world, and when the bad guy found out, he invited a bunch of his friends to dinner. He used the above method to borrow money from the former in front of him, and raised the interest rate to a higher level. The friend was embarrassed on the spot.
 
-再后来,再也没有人跟这个借钱的朋友来往了。因为大伙都知道他是一个只能占便宜,不能吃半点亏的人。 只能朋友信任他借给她钱。 但是他不信任朋友不借给别人钱的瘪三。
+After that, no one had any dealings with the borrower anymore. Because we all know that he is a person who can only take advantage of, can not eat half of the loss. Only friends trust him to lend her money. But he does not trust his friends not to lend money to others yakuza.
 
-别问这个坏小子是谁。
+Don't ask who this bad boy is.
 
 <img src="https://s2.loli.net/2023/07/21/cpGbLan8OKludoI.webp" style="zoom: 140%;" />
