--- a/source/_posts/眼力(三).md
+++ b/source/_posts/眼力(三).md
@@ -1,89 +1,89 @@
 ---
-title: 眼力(三)--高人与捡漏
+title: Eyesight(3)--The Higher Man and the Leakage Picker
 date: 2023-08-24 16:07:00
 categories:
-  - 人情世故
-tags:
-  - 眼力
-  - 因果
-  - 扫地僧
-  - 高人
-  - 方丈
-  - 寺庙
-  - 古玩
-  - 打眼
-description: '经验和见识也是可以通过时间的积累而获得增长的,并不是全部都限定在某个专业领域。有一些普遍存在的规律不受限于具体的专业'
+  - Human Facts
+tags: 
+  - Eye Power
+  - Karma
+  - The Sweeper
+  - high priests
+  - Abbot
+  - Monastery
+  - Curio
+  - Eyebrows
+description: Experience and insight can also be gained over time, and are not all limited to a particular specialty. There are some general rules that are not limited to specific specialties.
 cover: https://s2.loli.net/2023/08/24/JWYinCeGVv1UNF6.webp
 ---
 
-## 阅历
+## Experience
 
-经验和见识也是可以通过时间的积累而获得增长的,并不是全部都限定在某个专业领域。有一些普遍存在的规律不受限于具体的专业。
+Experience and insight can be gained over time, and not all of it is limited to a particular field of specialization. There are some general rules that are not limited to specific professions.
 
-有一次和一个朋友去了一个著名景点,看见一个白胡子老头子盘腿坐在路边,胡子飘逸,整个人散发出仙风道骨的气息。旁边有两个人说这是位大德高人,难得一遇,可以给有缘之人指点迷津。他们还热情地招呼我的朋友过去。我朋友觉得大出风头,马上兴奋起来,跟我说这绝对是位高人。
+Once and a friend went to a famous attraction, saw a white-bearded old man sitting cross-legged on the side of the road, beard flowing, the whole person exudes the atmosphere of the immortal style of Taoism. Two people beside him said that he was a great man of virtue, a rare encounter, and could give guidance to those who were destined to be there. They even warmly greeted my friend. My friend was so excited that he felt he had made a big splash, and told me that he was definitely a great man.
 
-我只是笑笑没有说话,因为我知道哪怕我说这个人不是高人,朋友也会觉得我傲慢,我只能保持缄默。如果我和他的阅历相当,我也会同样热情地去拜访这位“高人”的。
+I just smiled and didn't say anything, because I knew that even if I said that this person was not a master, my friend would think that I was arrogant, so I had to keep quiet. If I had the same experience as him, I would have been just as enthusiastic to visit this "man of honor".
 
-朋友坚持要回去拜访那位“高人”,我有点为难,因为这会花费很多时间。无奈之下,我只好告诉他,我去和旁边的人说一句话,他就会非常有礼貌地向我们告别,不会再招呼你了,以后你有机会再单独去拜访吧。朋友有点半信半疑。没过一会,他就看到那人非常礼貌地向我们鞠躬告别,挥手转身离去了。
+My friend insisted on going back to visit the "master", and I was in a difficult position because it would take a lot of time. I had no choice but to tell him that I would go and say a word to the person next to me, and he would politely bid us farewell and would not greet you again, so you could visit him alone when you have the chance later. My friend was a bit skeptical. Not a moment later, he saw the man very politely bowed to us to say goodbye, waved his hand and turned to leave.
 
-朋友问我说了什么,我没告诉他。
+My friend asked me what I said, but I didn't tell him.
 
-## 扫地僧
+## Sweeper
 
-随后我们进入了一座全国知名的寺庙,这里经常有高僧来讲学。规模宏伟壮观,各地来听讲的**行脚僧** 络绎不绝。整个寺院游人、僧众来来往往,热闹非凡。
+We then entered a nationally recognized temple where monks often come to give lectures. The scale is magnificent, and there is an endless stream of **walking monks** from all over the world who come to listen to the lectures. The whole temple visitors, monks come and go, lively.
 
-走到一个院角,坐下歇息。看见一个穿着破旧僧衣相貌平平的老僧在墙角,提着一个筐,弯腰在那里捡废纸。
+Walked to a corner of the courtyard, sat down to rest. Saw a tattered clothes wearing an ordinary-looking old monk in the corner, carrying a basket, stooping there to pick up waste paper.
 
-坐在台阶上,喝口矿泉水,休息一会。朋友笑道:“这老和尚捡废纸倒是很认真的,还挺尽心尽责的。”
+Sitting on the steps, drinking mineral water, rest for a while. My friend laughed and said: "This old monk picking up waste paper is very serious, but also quite conscientious and responsible."
 
-我细看了这个老和尚,长相平凡极了。一身破旧灰衣,穿在他身上有些肥大,只见他仔细把地上的废纸捡起,用手抚平,认真查看纸上的内容,然后放入筐中。动作一丝不苟,全神贯注,仿佛周围喧嚣都与他无关。感觉这老者年龄比较大,耳朵可能有点背。
+I took a close look at the old monk, looks ordinary. A worn gray clothes, wearing some fat in his body, only to see him carefully pick up the waste paper on the ground, smoothed with his hands, carefully check the content of the paper, and then put into the basket. The action is meticulous, fully concentrated, as if the surrounding noise has nothing to do with him. I felt that this old man was quite old and his ears might be a bit backward.
 
-我突然有所感悟,对朋友说:“这说不定就是高人,也许就是这座寺的方丈呢。”朋友觉得我在开玩笑,哈哈大笑道:“要是他是高人,那我就更是高人了。”
+I suddenly had a realization and said to my friend, "This might be a senior person, perhaps the abbot of this temple." My friend thought I was joking, and laughed out loud, "If he is a senior, then I am even more senior."
 
-我们在寺院转了一圈,忽听大雄宝殿鼓乐齐鸣,赶紧挤过去看热闹。只见僧众们衣着整齐,神情庄严,列队有序,准备上殿。前面一个僧人穿着鲜红袈裟,引人瞩目。走近一看,仪表不凡,定睛一瞧,原来就是刚才捡废纸的老和尚。
+We turned around in the temple, suddenly heard the Maharishi Temple drums and music, quickly crowded over to see the fun. See the monks dressed neatly, look solemn, orderly, ready to go to the temple. In front of a monk wearing a bright red robe, attracting attention. When I got closer, I saw that he was the old monk who had been picking up waste paper.
 
-## 药师
+## Medicine man
 
-我有个朋友,事业非常成功,是一个很聪明的人。一天,他兴高采烈地对我说,今天有一位老道士,还带着一个名人来拜访他,给他讲了很多道理,也讲了许多闻所未闻的神奇故事。老道士还给他开了个中药方子,要给他调理一番。接着他就描述起那人言谈举止非常不凡,散发着仙风道骨 之气的情形。我只是静静地听着,看我没反应,他心里也没了底,因为他知道我对中医略知一二。
+I have a friend who is very successful in his career and is a very smart man. One day, he told me cheerfully that an old Taoist priest, with a famous person in tow, visited him today and told him a lot of truths and unheard-of magical stories. The old Taoist priest also gave him a prescription of Chinese medicine to cure him. He then described how the man spoke and behaved in a very unusual manner, exuding an immortal and Taoist aura. I just listen quietly, see I did not respond, he also lost heart, because he knew I know a little about Chinese medicine.
 
-由于我未曾见过此人,不便评论此事。于是我讲了个当地一位很有名气的老中医的生活工作情况给他听:
+Since I have not seen this person, it is not appropriate to comment on this matter. So I told him about the life and work of a very famous local Chinese medicine practitioner.
 
-这位老中医可谓是名医,长年穿着一套中山装 ,看上去就像个普通老头子。看诊时最多就是听听病情介绍,然后就“嗯嗯”地应着,要不就问问病情,然后开方子,口头禅就是:“拿去吃药试试。”就没有其他多余的话了。
+This old Chinese medicine can be said to be a famous doctor, long years wearing a set of Zhongshan suit, looks like an ordinary old man. The most he would do is to listen to the introduction of the disease, and then "hmmmm", or ask about the disease, and then prescribe a prescription, and the mantra is: "Take it and try it." There were no other words.
 
-他从早上开始给病人看病开方子,中午简单地吃个大碗面之类的,然后继续看病。一张方子统一十块钱,不管贫富。只卖方子不卖药,拿着方子去买药由你自己决定去哪家便宜的药店。病人总是排着长龙等着看病,他也没有空闲聊天。不管你是官员还是富豪,名人还是普通人,都是一样的模式:一张方子,两句话,十块钱。
+He starts seeing patients in the morning, writes prescriptions, has a simple lunch of noodles, and then continues seeing patients. A prescription costs a flat ten dollars, no matter how rich or poor. Only sell the prescription not to sell drugs, take the prescription to buy drugs by your own decision to go to which cheap pharmacy. Patients are always waiting in long lines to see the doctor, and he has no time to chat. It doesn't matter if you are an official or a tycoon, a celebrity or an ordinary person, it's all the same pattern: one prescription, two words, ten dollars.
 
-我那位朋友听后若有所思。
+My friend was puzzled.
 
-## 变化
+## Change
 
-看似什么样的,未必就是真正那样。因为那些真正高深的人物,无暇去装成什么样子。不像那样的,或许才有真才实学。
+What seems to be the case may not be the case. Because those who are really profound don't have time to pretend to be something they're not. The ones who don't look like that may have real talent.
 
-话说回来,也许过些年,穿着洗得发白的中山装,或者提着筐子捡废纸的“高人”又会多起来,时代在变化。世界是个大舞台,既然观众品味改变,市场有需求,演员表演也会随之调整。
+That said, perhaps in a few years, wearing a white washed suit, or carrying a basket to collect waste paper "high people" will be more, the times are changing. The world is a big stage, since the audience's tastes change, the market demand, the actors and actresses will also be adjusted.
 
-前两天,一个朋友激动地对我述说,他又遇到一位高人,准备拜师。我听他诉说,脑海里仿佛看见他兴奋发红的面庞。我知道,我仍劝不动他,只能静静倾听。这些年,我已习惯了听这类故事,也能猜出后续发展。
+Two days ago, a friend excitedly told me that he had met another master and was ready to learn from him. As I listened to him, I could see in my mind's eye his face reddening with excitement. I knew that I could not persuade him, but could only listen quietly. Over the years, I have become accustomed to hearing such stories, and I could guess what was to come.
 
-陈公献在《六壬指南 》占武昌一课：“予初不知，不意断法竟与古事相合。然纯阴之课，干之阴神鲁都克日，主贼有埋伏。又支为城，上神克之，而上神又被阴神所克，主居守不仁，且欲自相攻击。又末传生合初贵，主内有暗降之人。此数事皆前人未尽之秘，予不惜笔之于书，以授后之学者。中谈到自己的心得,语气中透着舍不得公开的心情。
+In his "Guide to the Six Nonny", Chen Gongxian said, "I did not know at first, but I did not expect the method to be consistent with ancient events. However, in a purely Yin lesson, the Yin god of the stem, Ludu, is the day of the Lord's ambush. And the branch for the city, the upper God to overcome, and the upper God and the Yin God overcome, the main residence guards are not benevolent, and want to attack each other. And the end of the transmission of the birth of the combination of the first noble, the Lord within the secret descendants. These several things are the secret of the predecessors have not been exhausted, I do not hesitate to pen in the book, in order to teach the scholars of the future. In talking about his own insights, the tone of voice through the feelings of reluctance to disclose.
 
-他不会想到,时过境迁,他的秘密法门公开反而最保密。要不是前人吹嘘,这本书今天出版,魔力、可读性和冲击力都不会引人注意。在当前术数界,它的内容太普通,普通到无人会在意。
+He would not have thought that the time has changed, his secret method of public rather than the most secret. If it were not for the bragging of the former, this book published today, the magic, readability and impact will not attract attention. In the current world of magic, its content is too common, so common that no one will care.
 
-“一吊黄铜一吊金,拿到街头现人心,黄铜卖完金仍在,人知假不识真。”在这个广告时代,信息爆炸时代,对内容的追求注定会有所减弱。
+"A hang of brass and a hang of gold, take it to the street and show it to people's hearts, the brass is sold out and the gold is still there, people know it's fake but don't realize it's real." In this age of advertising and information explosion, the pursuit of content is destined to diminish.
 
-当今世界,我们被太多色彩和画面包围,眼睛疲于奔命。哪里还有心情体会,哪里还能安定下心慢慢琢磨?古语说“心神不定 ”,心不定,神又如何定得下来?
+In today's world, we are surrounded by too many colors and images, and our eyes are exhausted. How can we still have the mood to experience, how can we still settle down and slowly ponder? As the old saying goes, "the mind is restless", if the mind is restless, how can the spirit be settled?
 
-社会分工日益细化,资讯发达,服务健全,处处都是现成答案。在这环境下,需要历练和修养的“眼力”注定会有所下降。
+The division of labor in society is becoming more and more refined, information is developed, services are sound, and answers are readily available everywhere. In this environment, the "eyesight" that needs to be practiced and cultivated is destined to decline.
 
-在这个使用射电望远镜的时代,一个集体视力衰弱的年代也随之而来。
+In this age of radio telescopes, a time of collective vision loss has come.
 
-## 捡漏
+## Pick up
 
-最近,古玩收藏界也在热烈讨论鉴赏眼力的问题。
+Recently, the antique collection community is also enthusiastically discussing the problem of appreciation of eyesight.
 
-就在各种收藏神话层出不穷之时。资深古玩玩家,古瓷专家白明,写了一本书《打眼记》。“打眼”的意思是没有鉴赏眼光,买进了假货;相反,“捡漏儿”就是以极低廉的价格买到了贵重文物。
+In a variety of collection myths emerge endlessly. Veteran antique players, ancient porcelain expert Bai Ming, wrote a book "hit the eye record". "Eye" means that there is no appreciation of vision, bought into the fake; On the contrary, "pick up the leakage" is a very low price to buy valuable cultural relics.
 
-白明说:“我写这本书是想告诉大家:捡漏儿确实存在,只是概率太低,比飞机失事还罕见。而打眼的事,在古玩界每分每秒都在发生。”
+Bai Ming said: "I wrote this book is to tell you: pick up the leakage does exist, only the probability is too low, more rare than airplane crashes. And hit the eye of the thing, in the antique world every minute and every second is happening."
 
-著名学者、文物专家马未都先生也告诫收藏者:“别说业余爱好者,即使专业人士,甚至大师级人物,打眼鉴赏错误也是家常便饭。这些年我经历和见过的数不胜数,这个领域没有神仙人。”
+Famous scholars, cultural relics experts, Mr. Ma Weidu also cautioned collectors: "Do not say amateurs, even professionals, and even masters, eye appreciation errors are commonplace. These years I have experienced and seen countless, there is no immortal in this field."
 
-有首很红的歌词写道:“借我借我一双慧眼吧!”对刚接触或者初学术数的朋友来说,在没有开智慧之眼之前,保持理性冷静还是很必要的。
+There is a very popular song lyrics wrote: "Lend me lend me a pair of eyes!" For those who are new or new to math, it is still necessary to remain rational and calm before opening the eyes of wisdom.
 
 ![](E:\GitSpace\github\zizhu\caoyuan\source\_posts\assets\jlADKmEnYxI4WOt.webp)
