--- a/source/_posts/策略不挣钱？先来跑下回测试试.md
+++ b/source/_posts/策略不挣钱？先来跑下回测试试.md
@@ -1,67 +1,67 @@
 ---
-title: 量化策略不挣钱？先来跑下回测试试？
+title: Strategies that don't make money? What's the best way to test your strategy?
 date: 2023-07-28 18:01:00
 categories:
-  - 量化交易
-tags:
-  - 策略回测
-  - 趋势策略
-  - 震荡策略
-  - 低频策略
+  - Quantitative trading
+tags: 
+  - Strategy Backtesting
+  - Trend Strategy
+  - Oscillators
+  - Low Frequency Strategies
   - vnpython
-  - 股票交易
-  - 趋势
-  - 数字货币
-description: '收集历史行情数据,基于定义好的交易策略及参数,模拟在历史行情下执行策略对应的买卖点,计算交易盈亏情形。回测可以评估策略的实际效果,优化参数设定,选择有效的交易策略。良好的回测流程需要充分的行情数据、灵活的策略表达、严密的交易模拟、多维的指标分析。回测是确保策略有效性的基础,也是策略调优的主要手段。'
+  - Stock Trading
+  - Trends
+  - Digital Currency
+description: Collects historical market data, and based on the defined trading strategy and parameters, simulates the execution of the strategy's corresponding buy and sell points under the historical market, and calculates the trading profit and loss scenarios. Backtesting can evaluate the actual effectiveness of the strategy, optimize the parameter settings, and select an effective trading strategy. A good backtesting process requires sufficient market data, flexible strategy expression, rigorous trading simulation, multi-dimensional analysis of indicators. Backtesting is the basis for ensuring the effectiveness of a strategy, and it is also the main means of strategy tuning.
 cover: https://s2.loli.net/2023/07/28/5ZgaXr61lwLS4qC.png
 ---
 
-## 前言
+## Foreword
 
-对于低频量化交易来说， 回测是一个必不可少的过程，虽说回测盈利的策略不一定赚钱，但是回测亏损的策略一定是亏钱的。 所以说，回测不能证真，但是可以验伪。
+For low-frequency quantitative trading, backtesting is an essential process, although backtesting profitable strategies may not necessarily make money, but backtesting losing strategies must lose money. So, backtesting can't prove the truth, but it can check the falsification.
 
-本文准备分为两部分，一部分讲讲回测过程中遇到的几个坑，希望后来者可以遇到不要跳进去。另一个讲讲这些年那些大神写的回测引擎，希望对大家有所帮助。
+This article is prepared to be divided into two parts, one part of the backtesting process encountered a few pits, I hope that the later can be encountered do not jump in. Another talk about the backtesting engine written by those gods over the years, I hope it will help you.
 
-既有道，又有术，看君需求，愿君有所收获。
+Both the Tao and the art, depending on the needs of the gentleman, I hope you have gained something.
 
-上文说过，因为淋过雨，所以愿意为后来者撑把伞。但是我还要说，在前行的过程中，遇到诸位大神，无不是倾囊相售，所以我也愿意再次分享，愿能手留余香。
+As I said above, because of the rain, I am willing to hold an umbrella for those who come after me. But I also want to say, in the process of moving forward, met all the gods, all are sold, so I am also willing to share again, I wish to be able to leave a hand.
 
-感谢 刑不行老师、 千千大神，Jornason大神，扁豆子妹子，Puppy大神的文章和指导，非常感谢大神的文章和资料对我的帮助。
+Thank you for the articles and guidance from Mr. Criminal, Mr. Qian Qian, Mr. Jornason, Ms. Lentil, Mr. Puppy, and I am very grateful for the articles and information from the gods that have helped me.
 
-## 回测一般会遇到的坑
+### The pitfalls of backtesting in general
 
-本位不涉及财务数据之类的因子，纯粹从技术层面讨论这个坑的问题。
+This bit does not involve financial data and other factors, purely from the technical aspects of the discussion of this pit.
 
-只要超过股票的朋友，一定在股票软件上面看到一些神奇的技术指标，而且这些号称多少万多少万的指标还不小心被某位好心人公布出来了，你一看，我擦，好准！有了这个指标，快速发财，迎娶白富美 岂不是分分钟的事情？ 我这事走了狗屎运了啊~ 
+As long as more than the stock of friends, must be in the stock software above to see some magical technical indicators, and these claimed how many thousands of how many thousands of indicators have accidentally been published by a kind person, you look, I wipe, so accurate! With this indicator, you can get rich and marry a rich girl in no time. I'm so lucky!
 
 ![](https://s2.loli.net/2023/08/05/RWK2uyfqEeGhM6H.webp)
 
-等你真的按照这个神奇指标去做了，就会发现，我擦 咋回事，突然失灵了啊。印钞机咋回事变成了碎钞机了？
+When you really follow this magical indicator, you will realize, "What's going on?" Suddenly, it's not working. What happened to the money printing machine has turned into a money crushing machine?
 
-一般来说，这些骗人的指标用了以下手法：
+Generally speaking, these fraudulent indicators use the following techniques:
 
-### 新手最初级的坑：信号发生立即成交
+#### The most elementary pit of the newbie: the signal occurs immediately turnover
 
-这里特指的时低频使用k线交易的策略，例如：
+Here specifically refers to the low-frequency use of k-line trading strategies, such as:
 
-> IF Crossover(MA5, MA20) THEN Buy(Close，...)  # 当前MA5均线上穿MA20均线时，按收盘价买入
+> IF Crossover(MA5, MA20) THEN Buy(Close, ...)  # Buy(Close,...) when the current MA5 SMA crosses the MA20 SMA.
 
-这个其实挺符合直觉的，但是实际上，**你真正的买入发生在下一根K线的开盘价上面**！
+This one is actually quite intuitive, but in reality, **your actual buy happens above the opening price of the next K-line**!
 
-如果你这么回测，至少会有两个后果：
+If you backtest this way, there are at least two consequences:
 
-1. 当前K线没走完，最高价就触发了金叉信号，按照最高价就买入了，可能收盘价和最高价之间就存在不小的滑点。
-2. 当前K线最高价可以触发金叉信号，但按照收盘价计算却触发不了金叉信号，这就造成了实盘当中能成交、回测当中无法成交的不对应情况。
+1. the current K-line did not finish, the highest price triggered the golden cross signal, according to the highest price on the buy, there may be a not insignificant slippage between the closing price and the highest price.
+2. the current K line maximum price can trigger the golden cross signal, but according to the closing price can not trigger the golden cross signal, which results in the real market can be traded, back to the test can not be traded in the non-corresponding situation.
 
-你想清楚了吗？
+Have you thought it through?
 
-所以 这个需要改为 
+So, this needs to be changed to 
 
-> “当前K线出信号，下一根K线开盘价/限价成交”，例如上面的例子可以改为“IF Crossover(MA5[1], MA20[1]) THEN Buy(Open，...)”（根据上一根K线计算的MA5均线上穿MA20均线时，按照开盘价买入）。
+> "the current K-line out of the signal, the next K-line opening price / limit price transaction", for example, the above example can be changed to "IF Crossover (MA5[1], MA20[1]) THEN Buy(Open, ...)") (Buy at the open price when the MA5 SMA calculated from the previous K-line crosses the MA20 SMA).
 
-### 新手次初级的坑： 未来函数
+#### The Newbie Sub-Beginner's Pit: Future Functions
 
-在量化回测的时候,编写策略时经常会用到一些需要用到未来数据的函数,比如shift(),iloc[],这些函数本质上是在利用未来的数据来决定当前的交易行为。举个例子:
+In quantitative backtesting, the preparation of the strategy will often use some of the need to use the future data function, such as shift (), iloc [], these functions are essentially in the use of future data to determine the current trading behavior. As an example.
 
 ```python
 import pandas as pd
@@ -71,53 +71,53 @@ data = pd.DataFrame(np.random.randn(10))
 data['signal'] = np.where(data.shift(1) > 0, 1, 0)
 ```
 
-这里通过shift(1)取未来一期的值,来决定当前period的signal。但这在实际交易中是不可能的,因为当当前时刻时,是不知道未来会发生什么的。
+Here the shift(1) takes the value of a future period to determine the signal for the current period, but this is not possible in real trading, because when the current moment, it is not known what will happen in the future.
 
-这种将未来函数应用于生成交易信号的策略在回测时可以达到极佳的效果,但一旦用于实盘交易,就会出现巨大的策略实际效果与回测效果不符的情况。
+This strategy of applying the future function to generate trading signals can achieve excellent results in backtesting, but once used in real trading, there will be a huge discrepancy between the actual results of the strategy and the backtesting results.
 
-解决方法是尽量只用到当前时刻及历史数据来生成信号,不要利用任何未来函数,保证回测和实盘一致。
+The solution is to try to use only to the current moment and historical data to generate signals, do not utilize any future function, to ensure that the back test and the real market consistent.
 
-如果必须用,可以考虑设置一个期数的滞后期,让信号也滞后相应的期数,来模拟实际情况。这样可以尽量避免未来函数在回测与实盘中的偏差,使回测结果更加接近实盘交易效果。这是很多量化交易新手需要注意避免的一个坑
+If you have to use, you can consider setting a lag period, so that the signal also lags the corresponding period, to simulate the actual situation. This can try to avoid the future function in the backtest and real disk deviation, so that the backtest results closer to the real trading results. This is a pit that many newcomers to quantitative trading need to be careful to avoid!
 
-### 新手初级坑：幸运者偏差
+#### Beginner's Pit: Lucky Man Bias
 
-这个在股市就是回测使用了现存的所有股票回测，忘记了那些退市的股票，造成回测收益明显偏高，在币市上就是使用现存的币种，那些消失在历史的茫茫多的币种都被忽略不计了。那么，光看到好的结果，不好的结果一个都看不见，自然收益就会高很多，这个比较明显的会出现在定投类策略，和周期轮换类策略里面
+This is in the stock market is backtesting using all existing stocks backtesting, forgetting those delisted stocks, resulting in backtesting returns significantly higher, in the currency market is to use existing coins, those disappeared in the history of the bewildering number of coins have been ignored. Then, the light to see the good results, the bad results can not be seen, the natural return will be much higher, this is more obvious will appear in the fixed investment strategy, and the cycle rotation type of strategy inside
 
-### 新手坑：过拟合
+#### Newbie Pit: Overfitting
 
-我们经常会看到某些神论，比如某某品种某日必然下跌， 下跌多少点都能给你整的明明白白的。为了提高自己的权威性，往往还有图表显示他的预测历史是多么多么准确。这不是给你送救生衣，简直是给你送潜水艇来了。
+We often see certain theological theories, such as a certain variety of a certain day is bound to fall, down how many points can give you a whole clear. In order to increase their authority, often there are charts showing how accurate his prediction history is. This is not to send you a life jacket, simply to send you a submarine.
 
-你说不定还在想。我擦，我如果跟着这个预测走，到了低点 反手做多岂不是发财一瞬间？
+You might even be thinking. Damn, if I follow this prediction, to the low point of the backhand long will not get rich in a flash?
 
-你这么做了，就会发现，神奇的预测法师为啥在这一次就失灵了？
+You do this, you will find that the magical prediction mage why in this case failed?
 
-因为预测的博主用了机器学习历史交易数据， 而且还是用的不太灵光的那种。
+Because the blogger who made the prediction used machine-learning historical trading data, and the kind that doesn't work very well.
 
-### 新手坑：不考虑滑点和交易成本
+#### Beginner's Pit: Slippage and Trading Costs Not Taken Into Account
 
-你个新手的万倍收益策略基本上都没考虑滑点和手续费。所以在回测过程中，交易次数越多，挣得就越多，现实情况就是，你交易次数多了发现还不够手续费。利润都被滑点和交易手续费拿走了。
+Your newbie 10,000x earnings strategy basically doesn't take into account slippage and fees. So during backtesting, the more trades you make, the more money you make, and the reality is that you make more trades than you realize that you don't make enough to cover the commission. The profits are taken away by slippage and trading fees.
 
 ![](https://s2.loli.net/2023/08/05/j7Ufg2SMIq9oTvs.gif)
 
-当然，现在普遍都在使用机器学习之类进行因子挖掘，顺便也可以说说这方面的坑
+Of course, it's now common to use machine learning and such for factor mining, and by the way, you can talk about the pitfalls in this area as well
 
-### 高手坑：数据集不理想
+#### The pit of the masters: the data set is not ideal
 
-如果你用得数据集，是单边行情，是大方向上涨不回头，或者单纯震荡，就没有趋势行情，那么，你在数据集上面表现优秀得策略一旦行情转换，那么收益可想而知。
+If you use the data set, is a one-sided market, is the general direction of the rise does not turn back, or simply shock, there is no trend market, then you in the data set above the excellent performance of the strategy once the market conversion, then the return can be imagined.
 
-### 高手坑：回测时数据时间序列被打乱
+#### Master pit: backtesting data time series is disrupted
 
-这个问题很好理解，你想如果打乱了时间顺序，把未来发生的事提到前面来了，***模型就具有了脱离实际的“预测能力”，类似未来函数***的错误。
+This problem is very easy to understand, you think that if you disrupt the time sequence, the future events to mention the front, *** model has a detached from the actual "predictive ability", similar to the future function *** error.
 
-### 高手坑：模型选择错误
+#### Master Pit: Wrong Model Selection
 
-这些特征值可能都分布在高维空间，一个超平面切过去就能很好划分，但是如果用二维平面的模型去拟合，比如线性回归，就会出现这样的情况。
+These eigenvalues may be distributed in high-dimensional space, which can be well delineated by a hyperplane cut through, but if you use a two-dimensional planar model to fit, such as linear regression, this is what will happen.
 
-## 回测代码
+### Backtesting code:
 
-剩下分享下我收集的代码，希望能对您有所帮助
+The rest of the code I've collected is shared, I hope it can be helpful to you
 
-### 刑不行老师的新手回测代码：
+#### The newbie backtesting code from Mr. Criminal No Way:
 
 ```python
     import pandas as pd
@@ -171,12 +171,12 @@ data['signal'] = np.where(data.shift(1) > 0, 1, 0)
 
 ```
 
-### 千千大神的新手向回测代码：
+#### Newbie oriented backtesting code from the gods of Chiken:
 
 ```python
 import pandas as pd
 import numpy as np
-pd.set_option('expand_frame_repr', False)  # 当列太多时不换行
+pd.set_option('expand_frame_repr', False) 
 pd.set_option('display.max_rows', 10000)
 def s_dc(df):
     signal = []
@@ -204,30 +204,20 @@ def s_boll(df):
 
 def backtest(df, para, name, symbol, rule_type):
     '''
-        df: 历史数据
-        para： 策略参数
-        name: 策略名称
-        symbol: 交易对
-        rule_type: 时间周期
+
     '''
-    # 深拷贝
     df_test = df.copy()
-    #获取参数值
     m = para[0]
     n = para[1]
-    # 计算指标
     df_test.loc[:,'DC_upp'] = df_test.loc[:, 'close'].rolling(m, min_periods=1).max()
     df_test.loc[:,'DC_low'] = df_test.loc[:, 'close'].rolling(m, min_periods=1).min()
     df_test.loc[:,'DC_mid'] = (df_test.loc[:, 'DC_upp'] + df_test.loc[:, 'DC_low'])/2
 
-    # 布林线指标
     df_test.loc[:, 'boll_middle'] = df_test.loc[:, 'close'].rolling(m, min_periods=1).mean()
-    # 计算上轨、下轨道
-    df_test.loc[:, 'std'] = df_test.loc[:, 'close'].rolling(n, min_periods=1).std(ddof=0)  # ddof代表标准差自由度
+    df_test.loc[:, 'std'] = df_test.loc[:, 'close'].rolling(n, min_periods=1).std(ddof=0)
     df_test.loc[:, 'boll_upper'] = df_test.loc[:, 'boll_middle'] + n * df_test.loc[:, 'std']
     df_test.loc[:, 'boll_lower'] = df_test.loc[:, 'boll_middle'] - n * df_test.loc[:, 'std']
 
-    ### 画图检查数据
     import matplotlib.pyplot as plt
     plt.figure()
     plt.plot(df_test.loc[:,'DC_upp'])
@@ -240,23 +230,15 @@ def backtest(df, para, name, symbol, rule_type):
     plt.grid()
     plt.show()
 
-    ### 循环式回测（简单， 避免很多坑，接近实盘环境）  矢量式回测  向量式（快，未来函数）
-    # 窗口宽度
+
     window = 20
-    # K线数量
     nrows = df_test.shape[0]
-    # 初始持仓 1 -1 0
     position = 0
-    # 手续费
     fee = 2 / 1000
-    # 初始资产
     coin = 0
     cash = 10000
-    # 交易数量
     one_hand = 1
-    # 净值列表
     total = []
-    # 交易次数
     ntrade = 0
     # 
     for start_index in range(nrows - window):
@@ -265,13 +247,10 @@ def backtest(df, para, name, symbol, rule_type):
 
         df_real = df_test.iloc[start_index:start_index+window]
         
-        # 调用策略函数产生交易信号
         # if name =='boll':signal, s_name = s_boll(df_real)
         if name == 'dc': signal, s_name = s_dc(df_real)
-        # 获取当前开盘价格
         price = df_real.iloc[-1]['open']
 
-        # 当持仓为0 且 存在开多信号时
         if 'kd' in signal and position == 0:
             coin += one_hand
             cash -= one_hand * price * (1 + fee)
@@ -279,14 +258,12 @@ def backtest(df, para, name, symbol, rule_type):
             ntrade += 1
             print('kd' + str(price))
 
-        # 当持仓为1 且 存在平多信号时
         if 'pd' in signal and position == 1:
             coin -= one_hand 
             cash += one_hand * price * (1 - fee)
             position = 0
             print('pd' + str(price) + '\n')
 
-        # 当持仓为0 且 存在开空信号时
         if 'kk' in signal and position == 0:
             coin -= one_hand 
             cash += one_hand * price * (1 - fee)
@@ -294,7 +271,6 @@ def backtest(df, para, name, symbol, rule_type):
             ntrade += 1
             print('kk' + str(price))
 
-        # 当持仓为-1 且 存在平空信号时
         if 'pk' in signal and position == -1:
             coin += one_hand
             cash -= one_hand * price * (1 + fee)
@@ -303,25 +279,16 @@ def backtest(df, para, name, symbol, rule_type):
         
         total.append(cash + coin * price)
 
-    ## 显示结果
     total = np.array(total)
-    # 打开画布 图片布局为2行1列
     plt.figure()
-    # 第一张图
     plt.subplot(211)
-    # 画出开盘价时间序列
     plt.plot(df_test.loc[:,'open'])
-    # 加网格
     plt.grid()
-    # 第二张图
     plt.subplot(212)
-    # 画出净值曲线
     plt.plot(total)
-    # 加网格
     plt.grid()
     plt.title('ntrade:'+str(ntrade)+' total:'+str(round(total[-1],1))+' std:'+str(round(total.std(),1)))
     plt.show()
-    # 保存结果
     # plt.savefig('backtest_%s_%s_%s_%d.png'%(symbol, time ,s_name, m))
     # plt.close()
 
@@ -329,7 +296,6 @@ def backtest(df, para, name, symbol, rule_type):
 
 if __name__ == "__main__":
     symbol = 'btc'
-    # 导入历史数据 1min
     # df = pd.read_hdf(f'{symbol}usdt.h5')
     df = pd.read_csv('E:\work\exchange_data\\binance_EOS_USDT.csv')
 
@@ -337,7 +303,6 @@ if __name__ == "__main__":
     df = df[(df['candle_begin_time'] >= pd.to_datetime('2019-01-01 00:00:00'))
             & (df['candle_begin_time'] <= pd.to_datetime('2019-12-31 23:30:00'))]
 
-    # 转换到所需要的时间粒度 15min = 15 * 1min 
     rule_type = '60T'
     period_df = df.resample(rule = rule_type, on='candle_begin_time', label='left', closed='left').agg(
         {'open': 'first',
@@ -346,17 +311,12 @@ if __name__ == "__main__":
         'close': 'last',
         'volume': 'sum',
         })
-    # 去除一天都没有交易的周期
     period_df.dropna(subset=['open'], inplace=True)  
-    # 去除成交量为0的交易周期
     period_df = period_df[period_df['volume'] > 0]
-    # 重置标签
     period_df.reset_index(inplace=True)
     df = period_df[['candle_begin_time', 'open', 'high', 'low', 'close', 'volume']]
     df.reset_index(inplace=True, drop=True)
 
-    # 回测
-    # 回测参数
     for m in range(138, 300, 10):
         for n in range(1, 5, 5):
             para =[m,n]
@@ -369,26 +329,26 @@ if __name__ == "__main__":
             )
 ```
 
-### vnpy的回测模块
+#### Backtesting module for vnpy
 
 ```python
 https://gitee.com/Jornason/backtesting.git
 ```
 
-### 高手的回测代码：
+#### backtesting code for masters:
 
-心中有剑，手中无剑，高手当然不用回测，直接实盘！
+With a sword in his heart and no sword in his hand, the masters certainly don't need to backtest and go straight to the real deal!
 
-### 回测总结：
+#### backtest summary:
 
-其实做好一个回测，需要考虑的问题很多很多， 比如手续费，模拟下单引起的订单薄的扰动， 其他对手去下订单的情况，在订单薄中冰山订单，和机器人的策略等等因素。如果你要做回测考虑到上述因素之后，就会明白，回测的结果，因为你的订单的参与会随着时间延长变得与真实情况越来越远。这远不是你获取到0ms全量orderbook数据和0ms全量trade数据所能模拟出来的。
+In fact, to do a good backtesting, you need to consider a lot of issues, such as commission, simulation of orders caused by the perturbation of the order book, the situation of other opponents to go to the order book, in the order book of the iceberg order, and the robot's strategy, and other factors. If you want to do backtesting taking into account the above factors, you will realize that the results of backtesting, because of the participation of your orders, will become more and more distant from the real situation over time. This is far from what you can simulate with 0ms full orderbook data and 0ms full trade data.
 
-当然知道这些坑，能避免的尽量避免，别老是回测猛如虎，实盘二百五的局面。
+Of course, knowing these pits, can be avoided as much as possible to avoid, don't always back to test fierce as a tiger, real disk two hundred and fifty-five situation.
 
-我的观点，回测差不多就行了。如果回测下各项指标还比较理想，就可以进实盘跑跑试试。别指望回测能得到跟实盘一样的结果。这是不可能的。
+My point of view, backtest almost on the line. If the indicators under the back test is still relatively ideal, you can run into the real disk to try. Don't expect the back test can get the same results as the real disk. This is impossible.
 
-如果回测都亏损，那就没必要上实盘了吧。
+If the back test are losing, then there is no need to go on the real market.
 
-毕竟我们扛着鱼竿是来钓鱼的，不是来给鱼喂饭的。
+After all, we carry a fishing rod is to fish, not to feed the fish.
 
 ![](https://s2.loli.net/2023/08/05/BdzQUuJ9D7f4kZN.webp)
